--- a/app/blocks/layout-default/layout-default.jade
+++ b/app/blocks/layout-default/layout-default.jade
@@ -2,10 +2,14 @@ include /../node_modules/bemto.jade/bemto
 include /../node_modules/jade-injected/jade-injected
 include ../page/page
 include ../scripts/scripts
+include ../header/header
+include ../subheader/subheader
 
 doctype html
 html(lang='ru')
 	include ../head/head
 	+page
+		+header
+		+subheader
 		block content
 		+scripts(['app.min.js'])
